finished implementing the app

--- a/app/src/main/res/layout/activity_quotes.xml
+++ b/app/src/main/res/layout/activity_quotes.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".ui.quotes.QuotesActivity">
 
     <TextView
-        android:id="@+id/textView_quotes"
+        android:id="@+id/textQuotes"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintHeight_percent="0.55"
@@ -34,13 +35,14 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:hint="Quote"
+        android:hint="@string/quote"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_quotes"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textQuotes"
+        app:layout_constraintVertical_bias="0.0"
+        android:importantForAutofill="no" />
 
     <EditText
         android:id="@+id/editText_author"
@@ -51,13 +53,15 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:hint="Author"
+        android:hint="@string/author"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_quote"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:inputType="text"
+        android:autofillHints="name" />
 
     <Button
         android:id="@+id/button_add_quote"
@@ -67,7 +71,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="?colorAccent"
-        android:text="Add Quote"
+        android:text="@string/add_quote"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="@+id/editText_author"
         app:layout_constraintEnd_toEndOf="parent"
